Fixed css so Mushroom Identification image is forced to top on mobile screens while remaining centered on PC screens

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -200,6 +200,12 @@ html, body {
       flex-direction: column;
       align-items: center;
     }
+
+    .center-img {
+        order: -1;
+        align-self: flex-start;
+        width: 100%;
+    }
   
     .link-item img,
     .center-img img {
